--- a/index.html
+++ b/index.html
@@ -2,19 +2,39 @@
 <html>
 <head>
     <title>The AJAXson 5</title>
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script type="text/javascript" src="request-gif.js"></script>
-</head>
-<body>
-    <h1>The AJAXson 5</h1>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
 
-    <form id="form-gif-request" />
-        <label>What kind of Jackson 5 related gif do you want?</label>
-        <input name="tag" type="text"/>
-        <input type="submit" value="Get my Gif!" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+    <!-- <script src="https://code.jquery.com/jquery-latest.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
+    <script type="text/javascript" src="request-gif.js"></script>
+    <link rel="stylesheet" href="style.css">
+
+
+</head>
+<body class="container-fluid">
+    <!-- div class="well text-primary text-center "> -->
+
+      <h1 class="main">The AJAXson 5</h1>
+    <!-- </div> -->
+
+    <form   id="form-gif-request" />
+        <div class="row well">
+            <label>What kind of Jackson 5 related gif do you want?</label>
+            <!-- <input name="tag" type="text"/> -->
+            <input id="input" name="tag" type="text" />
+          <!-- </div> -->
+        </div>
+      <div class = "row well">
+        <label> Prove you are not a robot by answering this riddle</label>
+        <input id="robotQuery" name = "captcha" type = "text"/> <strong>Jacksons are better than 1. <strong>
+        <input class="btn btn-primary" type="submit" value="Get my Gif!" />
+      </div>
+
     </form>
 
-    <img id="gif" src="" hidden="true"/>
+    <img  class="img-responsive" id="gif" src="" hidden="true"/>
     <p id="feedback" hidden="true`"></p>
 
 </body>
